# linz_sumo_scenario

./: Analysis_based_on_routes_file.ipynb  Dockerfile  README.md  charging_stations.add.xml  docker-compose.yml  docker.sh  pyproject.toml
city_of_linz_source/: 2023JkuExpVM_link.CTF  2023JkuExpVM_link.PRJ  2023JkuExpVM_link.SHX  2023JkuExpVM_node.CTF  2023JkuExpVM_node.DBF  2023JkuExpVM_node.SHP  2023JkuExpVM_node.SHX
config/: charging_stations.add.xml
h2mob/: pyproject.toml
h2mob/h2mob/: main.py
h2mob/h2mob/services/: generate_scenario.py  simulation.py
h2mob/h2mob/settings/: general.py  generator_config.py  simulation.py
h2mob/template/: osm.sumocfg  vehicle_type.xml
scenario_generator/: pyproject.toml  vehicle_types.xml
scenario_generator/scenario_generator/: main.py
scenario_generator/scenario_generator/services/: generate_scenario.py
scenario_generator/scenario_generator/settings/: generator_config.py  volume_profile.py
scenario_generator/template/: osm.sumocfg
scenarios/city_of_linz/: charging.add.xml  dummy.xml  osm.sumocfg
scenarios/linz/: routes.rou.xml  trips.trips.xml
scenarios/test_scenario/: osm.add.xml  osm.sumocfg
simulation/: pyproject.toml
src/: main.py
src/configs/: scenario_config.py  settings.py
src/schemas/: vehicles.py
src/services/: vehicle.py
src/step_listeners/: loaded_vehicles.py  simulated_vehicles.py
src/storages/: cache.py  simulation.py
src/utils/: scenario_parser.py
test_scenario/: osm.add.xml  osm.netccfg  osm.sumocfg  routes.rou.xml  trips.trips.xml  vehicles_types.add.xml
utils/: create_24h_traffic.py  measure_traffic_volume.py  plot_statistic.py  profile.csv  trips.trips.xml
